--- a/index.html
+++ b/index.html
@@ -7,5 +7,76 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Odin Landing Page</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar">
+      <div class="container">
+        <div class="logo">Header Logo</div>
+        <ul class="nav">
+          <li>
+            <a href="#">header link one</a>
+          </li>
+          <li>
+            <a href="#">header link two</a>
+          </li>
+          <li>
+            <a href="#">header link three</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <header class="header">
+      <div class="container">
+        <div>
+          <h1>This website is awesome</h1>
+          <p>
+            This website has some subtext that goes here under the main title.
+            it's a smaller font and the color is lower contrast.
+          </p>
+          <button>Sign up</button>
+        </div>
+        <img src="" alt="This is a placeholder for an image" />
+      </div>
+    </header>
+
+    <section class="cards">
+      <div class="container">
+        <h2>Some random information</h2>
+        <div class="card">
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="quote">
+      <div class="container">
+        <p>
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows? All i know is that it looks nice.<q>-Thor, God of Thunder</q>
+        </p>
+      </div>
+    </section>
+
+    <section class="call-to-action">
+      <div class="container">
+        <h3>Call to action! It's time!</h3>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button>Sign up</button>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <p>Copyright &copy; The Odin Project 2021</p>
+    </footer>
+  </body>
 </html>
